--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://lgerfx.com" data-toggle="dropdown-submenu" aria-expanded="false">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://lgerfx.com" data-toggle="dropdown-submenu" aria-expanded="true">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://mobirise.com">Trading</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://lgerfx.com">Trading</a></div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://lgerfx.com">
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/q">free website builder download</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
+<section class="engine"><a href="https://mobirise.ws/d">best free website software</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
 
     
 
