create github pages

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">easy site builder</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
+<section class="engine"><a href="https://mobirise.ws/k">develop free website</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
 
     
 
@@ -247,8 +247,8 @@
                     Contacts
                 </h5>
                 <p class="mbr-text">
-                    Email: support@mobirise.com
-                    <br>Phone: +1 (0) 000 0000 001
+                    Email: ironeagle921@lger.com
+                    <br>Phone: +62 000 0000 001
                     <br>Fax: +1 (0) 000 0000 002
                 </p>
             </div>
