create github pages

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
+<section class="engine"><a href="https://mobirise.ws/k">develop your own website</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
 
     
 
@@ -73,7 +73,7 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">Lgerfx</h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">LGFX</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Simple Step for Opening Account.<br>Variety Deposite Methode<br>All &nbsp;Trading style allowed <br>Best setting and calibration of Meta Trader Trading Server<br></p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://lgerfx.com">LEARN MORE</a>
@@ -109,9 +109,7 @@
                         </div>
                     </div>
                     <div class="plan-body">
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise is perfect for non-techies who are not familiar with web development.
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7">This product is suitable for entry level trader&nbsp;<br>- contrac size<br>- Min Trade<br>- Max Trade<br>- Leverage<br>- Pricing Format<br>- Commission<br>- Swap&nbsp;<br>- Stop Out<br>- Scalp/EA<br>- Rebates<br><br></p>
                         <div class="mbr-section-btn pt-4 text-center"><a href="https://lgerfx.com" class="btn btn-primary display-4">register</a></div>
                     </div>
                 </div>
@@ -132,8 +130,16 @@
                     </div>
                     <div class="plan-body">
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise is perfect for non-techies who are not familiar with web development.
-                        </p>
+                            Regular account is suitable for trader<br>- contrac size
+<br>- Min Trade
+<br>- Max Trade
+<br>- Leverage
+<br>- Pricing Format
+<br>- Commission
+<br>- Swap 
+<br>- Stop Out
+<br>- Scalp/EA
+<br>- Rebates<br></p>
                         <div class="mbr-section-btn pt-4 text-center"><a href="https://lgerfx.com" class="btn btn-primary display-4">register</a></div>
                     </div>
                 </div>
@@ -154,9 +160,17 @@
                         </div>
                     </div>
                     <div class="plan-body ">
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise is perfect for non-techies who are not familiar with web development.
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7">Premium Account is suitable for advance and profesional trader<br>- contrac size
+<br>- Min Trade
+<br>- Max Trade
+<br>- Leverage
+<br>- Pricing Format
+<br>- Commission
+<br>- Swap 
+<br>- Stop Out
+<br>- Scalp/EA
+<br>- Rebates
+<br>&nbsp;</p>
                         <div class="mbr-section-btn pt-4 text-center"><a href="https://lgerfx.com" class="btn btn-primary display-4">register</a></div>
                     </div>
                 </div>
@@ -247,7 +261,7 @@
                     Contacts
                 </h5>
                 <p class="mbr-text">
-                    Email: ironeagle921@lger.com
+                    Email: ironeagle921@lgfx.com
                     <br>Phone: +62 000 0000 001
                     <br>Fax: +1 (0) 000 0000 002
                 </p>
@@ -271,7 +285,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2018 LGERFX - All Rights Reserved
+                        © Copyright 2018 LGFX - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
