--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">develop your own website</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
 
     
 
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                     <div class="plan-body">
-                        <p class="mbr-text mbr-fonts-style display-7">This product is suitable for entry level trader&nbsp;<br>- contrac size<br>- Min Trade<br>- Max Trade<br>- Leverage<br>- Pricing Format<br>- Commission<br>- Swap&nbsp;<br>- Stop Out<br>- Scalp/EA<br>- Rebates<br><br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">This product is suitable for entry level trader&nbsp;<br>- contrac size<br>- Min Trade<br>- Max Trade<br>- Leverage<br>- Pricing Format<br>- Commission<br>- Swap&nbsp;<br>- Stop Out<br>- Scalp/EA<br>- Rebates<br></p>
                         <div class="mbr-section-btn pt-4 text-center"><a href="https://lgerfx.com" class="btn btn-primary display-4">register</a></div>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     <div class="plan-body ">
-                        <p class="mbr-text mbr-fonts-style display-7">Premium Account is suitable for advance and profesional trader<br>- contrac size
+                        <p class="mbr-text mbr-fonts-style display-7">Premium Account is suitable for &nbsp;profesional trader<br>- contrac size
 <br>- Min Trade
 <br>- Max Trade
 <br>- Leverage
@@ -169,8 +169,7 @@
 <br>- Swap 
 <br>- Stop Out
 <br>- Scalp/EA
-<br>- Rebates
-<br>&nbsp;</p>
+<br>- Rebates&nbsp;</p>
                         <div class="mbr-section-btn pt-4 text-center"><a href="https://lgerfx.com" class="btn btn-primary display-4">register</a></div>
                     </div>
                 </div>
