create github pages

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
+<section class="engine"><a href="https://mobirise.ws/p">open source website creator</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
 
     
 
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                     <div class="plan-body">
-                        <p class="mbr-text mbr-fonts-style display-7">This product is suitable for entry level trader&nbsp;<br>- contrac size<br>- Min Trade<br>- Max Trade<br>- Leverage<br>- Pricing Format<br>- Commission<br>- Swap&nbsp;<br>- Stop Out<br>- Scalp/EA<br>- Rebates<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7"></p><p>This product is suitable for entry level trader&nbsp;<br>- contrac size&nbsp; &nbsp; &nbsp; &nbsp; $100.000<br>- Min Trade&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;lot 0.01<br>- Max Trade&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;lot 25<br>- Leverage &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;1: 400<br>- Pricing Format&nbsp;&nbsp; &nbsp; &nbsp; 5 digits<br>- Commission&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;free<br>- Stop Out&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;2 pips<br>- Scalp/EA &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; allowed<br></p><p></p>
                         <div class="mbr-section-btn pt-4 text-center"><a href="https://lgerfx.com" class="btn btn-primary display-4">register</a></div>
                     </div>
                 </div>
@@ -253,7 +253,7 @@
                 <h5 class="pb-3">
                     Address
                 </h5>
-                <p class="mbr-text">921 Water Place &nbsp;Street<br>British Virginia Islan</p>
+                <p class="mbr-text">921 Water Place &nbsp;Street<br>British Virgin Island</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
