create github pages

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://lgerfx.com" data-toggle="dropdown-submenu" aria-expanded="true">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
+                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://lgerfx.com" data-toggle="dropdown-submenu" aria-expanded="false">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://lgerfx.com">Trading</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://lgerfx.com">Log In</a></div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://lgerfx.com">
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source website creator</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
+<section class="engine"><a href="https://mobirise.ws/e">best web maker software</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
 
     
 
@@ -136,10 +136,9 @@
 <br>- Leverage
 <br>- Pricing Format
 <br>- Commission
-<br>- Swap 
 <br>- Stop Out
 <br>- Scalp/EA
-<br>- Rebates<br></p>
+<br></p>
                         <div class="mbr-section-btn pt-4 text-center"><a href="https://lgerfx.com" class="btn btn-primary display-4">register</a></div>
                     </div>
                 </div>
@@ -166,10 +165,8 @@
 <br>- Leverage
 <br>- Pricing Format
 <br>- Commission
-<br>- Swap 
 <br>- Stop Out
-<br>- Scalp/EA
-<br>- Rebates&nbsp;</p>
+<br>- Scalp/EA&nbsp;</p>
                         <div class="mbr-section-btn pt-4 text-center"><a href="https://lgerfx.com" class="btn btn-primary display-4">register</a></div>
                     </div>
                 </div>
@@ -197,8 +194,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">
                         For Windows Desktop PC</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       Mobirise gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
-                    </p>
+                       MT5 make you the freedom to develop trade</p>
                     <div class="mbr-section-btn text-center"><a href="https://download.mql5.com/cdn/web/8872/mt5/ligertradinginc5setup.exe" class="btn btn-secondary display-4">Dowload</a></div>
                 </div>
             </div>
@@ -209,8 +205,7 @@
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">For Mobile Android &nbsp;&amp; Ios</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                       All sites you make with Mobirise are mobile-friendly. You don't have to create a special mobile version of your site.
+                    <p class="mbr-text mbr-fonts-style display-7">MT5you make with Mobirise are mobile-friendly. You don't have to .
                     </p>
                     <div class="mbr-section-btn text-center"><a href="https://download.mql5.com/cdn/mobile/mt5/android?server=LigerTradingInc-Demo,LigerTradingInc-Live" class="btn btn-secondary display-4">Download</a></div>
                 </div>
