create github pages

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best web maker software</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
+<section class="engine"><a href="https://mobirise.ws/p">open source website builder</a></section><section class="cid-qL3pjIzRq1 mbr-fullscreen mbr-parallax-background" id="header2-k">
 
     
 
@@ -205,7 +205,7 @@
                 </div>
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">For Mobile Android &nbsp;&amp; Ios</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">MT5you make with Mobirise are mobile-friendly. You don't have to .
+                    <p class="mbr-text mbr-fonts-style display-7">MT5 make you more flexible to trade every where.
                     </p>
                     <div class="mbr-section-btn text-center"><a href="https://download.mql5.com/cdn/mobile/mt5/android?server=LigerTradingInc-Demo,LigerTradingInc-Live" class="btn btn-secondary display-4">Download</a></div>
                 </div>
@@ -218,7 +218,7 @@
                 <div class="card-box align-center">
                     <h4 class="card-title mbr-fonts-style display-7">For Mac</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                       Mobirise offers many site blocks in several themes, and though these blocks are pre-made, they are flexible.
+                       MT5 for Mac offers many site blocks in several themes, and though these.
                     </p>
                     <div class="mbr-section-btn text-center"><a href="https://download.mql5.com/cdn/mobile/mt5/ios?server=LigerTradingInc-Demo,LigerTradingInc-Live" class="btn btn-secondary display-4">Download</a></div>
                 </div>
